--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,76 +1,3 @@
-/*Custom styles*/
-
-/* NAV BAR */
-
-@media (min-width: 800px) {
-
-    .nav {
-      display: none;
-      position: fixed;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      height: 100%;
-      list-style: none;
-      z-index: 997;
-    }
-    
-    @media (min-width: 500px) and (min-height: 375px) {
-      .nav {
-        display: block;
-      }
-    }
-}
-
-.nav > .dot-nav {
-	position: fixed;
-	z-index: 9999;
-	right: 50px;
-	top: 50%;
-	-webkit-transform: translateY(-50%);
-	-moz-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	transform: translateY(-50%);
-}
-
-.nav > .dot-nav a {
-	display: block;
-	position: relative;
-	color: transparent;
-	height: 30px;
-}
-
-.dot-nav {
-    color: transparent;
-}
-
-.nav > .dot-nav a:after {
-	content: '';
-	position: absolute;
-	width: 15px;
-	height: 15px;
-	border-radius: 50%;
-	border: 4px solid #fff;
-}
-
-.nav > .dot-nav a:hover:after {
-	background: rgba(255,255,255,0.6);
-}
-
-.nav > .dot-nav a.active::after {
-	background: #fff !important;
-}
-
-.nav section {
-	position: relative;
-	background-position: top center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-attachment: fixed;
-}
-
-/*Headings*/
-
 h1 {
     font-size: 3.5em;
     font-family: 'Roboto', sans-serif;
@@ -118,6 +45,53 @@ p {
     }
 }
 
+.text-with-bk {
+    color: #ffffff;
+    text-shadow: rgba(0, 0, 0, 0.5) 0px 0px 2px, rgba(0, 0, 0, 0.3) 0px 0px 20px;
+    /*    font-family: "nyt-cheltenham-sh", "nyt-cheltenham", georgia, "times new roman", times, serif;*/
+    margin: 0 25px;
+}
+
+.text-with-bk .text-original span {
+    display: inline;
+    background-color: #272727;
+    box-shadow: 15px 7px 0 #272727, -15px -5px 0 #272727, 15px -5px 0 #272727, -15px 7px 0 #272727;
+    opacity: 0.2;
+    color: transparent;
+    text-align: justify;
+    font-weight: bold;
+}
+
+
+.text-with-bk {
+    position: relative;
+    margin: 30px 50px;
+    text-align: justify;
+    font-weight: bold;
+}
+
+
+.text-with-bk .text-duplicate {
+    top: 0;
+    left: 0;
+    display: inline-block;
+    z-index: 2;
+    box-shadow: none;
+    position: absolute;
+    opacity: 1;
+    text-align: justify;
+    font-weight: bold;
+}
+
+.text-with-bk .text-duplicate span {
+    color: white;
+    display: inline;
+    background-color: transparent;
+    box-shadow: inset 15px 7px 0 transparent, inset -15px -5px 0 transparent, inset 15px -5px 0 transparent, inset -15px 7px 0 transparent;
+    text-align: justify;
+    font-weight: bold;
+}
+
 /*Colors*/
 .ochablue {
     color: #418fde;
@@ -130,145 +104,95 @@ p {
 }
 
 .caption {
-    position: absolute;
+    position: fixed;
     right: 5%;
     bottom: 5%;
     max-width: 350px;
-
 }
 
-/*Slides backgrounds*/
-
-.head1 {
-    padding-top: 2%;
-}
-
-.para1 {
-    padding-top: 2%;
-}
-
-.head2 {
-    padding-top: 5%;
-}
-
-.para3 {
-    padding-top: 12%;
-}
-
-.para4 {
-    padding-top: 12%;
-}
-
-.head3 {
-    padding-top: 4%;
-}
-
-.para5 {
-    padding-top: 4%;
-}
-
-.para6 {
-    padding-top: 4%;
-}
-
-.para7 {
-    padding-top: 4%;
-}
-
-.para8 {
-    padding-top: 15%;
-}
-
-.para9 {
-    padding-top: 15%;
-}
-
-/*Home*/
-
-.slide0 {
-    background:
-        linear-gradient(rgba(20, 20, 20, .5), rgba(20, 20, 20, .5)),
-        url(../img/img_parallax.jpg) no-repeat center;
-    -webkit-background-size: cover;
-    background-size: cover;
+body {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    color: #000;
+    background-color: #aaa;
+    transition: background-image 1s ease;
+    overflow-x: hidden;
     background-attachment: fixed;
-}
-
-.slide1 {
-    background:
-        linear-gradient(rgba(20, 20, 20, .5), rgba(20, 20, 20, .5)),
-        url(../img/img_parallax6.jpg) no-repeat center;
-    -webkit-background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
 }
 
-.slide2 {
-    background:
-        linear-gradient(rgba(20, 20, 20, .5), rgba(20, 20, 20, .5)),
-        url(../img/img_parallax2.jpg) no-repeat center;
-    -webkit-background-size: cover;
-    background-size: cover;
-    background-attachment: fixed;
-}
+body::-webkit-scrollbar {
+    display: none;
+  }
 
-.slide3 {
-    background:
-        linear-gradient(rgba(20, 20, 20, .5), rgba(20, 20, 20, .5)),
-        url(../img/img_parallax3.jpg) no-repeat center;
-    -webkit-background-size: cover;
-    background-size: cover;
-    background-attachment: fixed;
-}
-
-.slide4 {
-    background:
-        linear-gradient(rgba(20, 20, 20, .5), rgba(20, 20, 20, .5)),
-        url(../img/img_parallax4.jpg) no-repeat center;
-    -webkit-background-size: cover;
-    background-size: cover;
-    background-attachment: fixed;
-}
-
-.slide7 {
-    background:
-        linear-gradient(rgba(20, 20, 20, .5), rgba(20, 20, 20, .5)),
-        url(../img/img_parallax7.jpg) no-repeat center;
-    -webkit-background-size: cover;
-    background-size: cover;
-    background-attachment: fixed;
-}
-
-.slide8 {
-    background:
-        linear-gradient(rgba(20, 20, 20, .5), rgba(20, 20, 20, .5)),
-        url(../img/img_parallax8.jpg) no-repeat center;
-    -webkit-background-size: cover;
-    background-size: cover;
-    background-attachment: fixed;
-}
-
-
-/*Video background*/
-
-
-video {
-    width: 100% !important;
-}
-
-.video-background-holder {
-    position: relative;
-    background-color: black;
-    height: calc(100vh- 72px);
-    min-height: 25rem;
+/* panel styles */
+.panel {
+    /* min height incase content is higher than window height */
     width: 100%;
-    overflow: hidden;
+    min-height: 100vh;
+    /* display: flex; */
+    justify-content: space-around;
+    align-items: center;
+    font-family: sans-serif;
+    /* outline: 10px solid hotpink; */
+    /* turn above on to see the edge of panels */
 }
 
+/* images */
+.image-zero {
+    background-image: url(../img/img_parallax.jpg);
+    background-size: cover;
+}
+
+.image-one {
+    background-image: url(../img/img_parallax6.jpg);
+    background-size: cover;
+}
+
+.image-two {
+    background-image: url(../img/img_parallax2.jpg);
+    background-size: cover;
+}
+
+.image-three {
+    background-image: url(../img/img_parallax3.jpg);
+    background-size: cover;
+}
+
+.image-four {
+    background-image: url(../img/img_parallax4.jpg);
+    background-size: cover;
+    min-height: 100%;
+    min-width: 100%;
+}
+
+.image-five {
+    background-image: url(../img/test.gif);
+    min-height: 100%;
+    min-width: 100%;
+    object-fit: cover;
+}
+
+.image-seven {
+    background-image: url(../img/img_parallax7.jpg);
+    background-size: cover;
+}
+
+.image-eight {
+    background-image: url(../img/img_parallax8.jpg);
+    background-size: cover;
+}
+
+.image-nine {
+    background-image: url(../img/img_parallax8.jpg);
+    background-size: cover;
+}
 .video-background-holder video {
     position: absolute;
     top: 50%;
-    left: 50%;      
+    left: 50%;
     min-width: 100%;
     min-height: 100%;
     width: auto;
@@ -287,118 +211,91 @@ video {
 
 
 .video-background-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: black;
-    opacity: 0.5;
-    z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  opacity: 0.5;
+  z-index: 1;
 }
 
-/*Yemen*/
-
-.slide0-Y {
-    background:
-        linear-gradient(rgba(20, 20, 20, .5), rgba(20, 20, 20, .5)),
-        url(../img/Slide0-Y.jpg) no-repeat center;
-    background-size: cover;
-
-}
-.slide2-Y {
-    background:
-        linear-gradient(rgba(20, 20, 20, .5), rgba(20, 20, 20, .5)),
-        url(../img/Slide2-Y.jpg) no-repeat center;
-    background-size: cover;
-}
-.slide3-Y {
-    background:
-        linear-gradient(rgba(20, 20, 20, .5), rgba(20, 20, 20, .5)),
-        url(../img/Slide3-Y.jpg) no-repeat center;
-    background-size: cover;
-}
-
-/* FADE EFFECT */
-
-.fullpage-wrapper {
-	width: 100%!important;
-    transform: none!important;
-    overflow: hidden;
-    padding-top: 0%;
-}
-
-.fp-section {
-	width: 100%!important;
-	position: absolute;
-	left: 0;
-	top: 0;
-	visibility: hidden;
-	opacity: 0;
-	z-index: 0;
-    transition: all .7s ease-in-out;
-    overflow: hidden;
-}
-
-.fp-section.active {
-	visibility: visible;
-	opacity: 1;
-	z-index: 1;
-}
-
-.fp-tableCell {
-    display: list-item;
-    vertical-align: top;
-}
-
-/*Text background*/
-
-.text-with-bk {
-    color: #ffffff;
-    text-shadow: rgba(0, 0, 0, 0.5) 0px 0px 2px, rgba(0, 0, 0, 0.3) 0px 0px 20px;
-    /*    font-family: "nyt-cheltenham-sh", "nyt-cheltenham", georgia, "times new roman", times, serif;*/
-    margin: 0 20px;
-}
-
-.text-with-bk .text-original span {
-    display: inline;
-    background-color: #272727;
-    box-shadow: 15px 7px 0 #272727, -15px -5px 0 #272727, 15px -5px 0 #272727, -15px 7px 0 #272727;
-    opacity: 0.5;
-    color: transparent;
-    text-align: justify;
-    overflow: hidden;
-}
-
-
-.text-with-bk {
-    position: relative;
-    margin: 30px 50px;
-    text-align: justify;
-    overflow: hidden;
-}
-
-
-.text-with-bk .text-duplicate {
-    top: 0;
-    left: 0;
-    display: inline-block;
-    z-index: 2;
-    box-shadow: none;
-    position: absolute;
+.fade-in {
     opacity: 1;
-    text-align: justify;
-    overflow: hidden;
+    animation-name: fadeInOpacity;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in;
+    animation-duration: 2s;
 }
 
-.text-with-bk .text-duplicate span {
-    color: white;
-    display: inline;
-    background-color: transparent;
-    box-shadow: inset 15px 7px 0 transparent, inset -15px -5px 0 transparent, inset 15px -5px 0 transparent, inset -15px 7px 0 transparent;
-    text-align: justify;
-    overflow: hidden;
+@keyframes fadeInOpacity {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
+div {
+    position: relative;
+}
 
+/* Slide Background */
 
+.head1 {
+    padding-top: 20%;
+    padding-left: 3%;
+    font-size: 1.2rem;
+    font-weight: bolder;
+}
+
+.para1 {
+    font-size: 1.2rem;
+}
+
+.head2 {
+    font-size: 1.2rem;
+}
+
+.para2 {
+    font-size: 1.2rem;
+}
+
+.para3 {
+    font-size: 1.2rem;
+}
+
+.para4 {
+    font-size: 1.2rem;
+
+}
+
+.head3 {
+    font-size: 1.2rem;
+}
+
+.para5 {
+    font-size: 1.2rem;
+} 
+
+.para6 {
+    font-size: 1.2rem;
+}
+
+.para7 {
+    font-size: 1.2rem;
+}
+
+.para8 {
+    font-size: 1.2rem;
+}
+
+.para9 {
+    font-size: 1.2rem;
+}
+
+.para10 {
+    font-size: 1.2rem;
+}
